<resources>
    <string name="app_name">History.id</string>
    <string name="username">  Username</string>
    <string name="password">  Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not registered ?</string>
    <string name="registered">REGISTER</string>
    <string name="confrim_password"> Confrim Password</string>
    <string name="register">Register</string>
    <string name="no_account_yet">No account yet ?</string>
    <string name="already">Already a member ?</string>
    <string name="title_activity_beranda">BerandaActivity</string>
    <string name="action_langkah">Langkah</string>
    <string name="action_logout">Logout</string>
</resources>
